<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/selector_home"
        android:title="@string/home" />
    
    <item
        android:id="@+id/nav_booking"
        android:icon="@drawable/selector_booking"
        android:title="@string/booking" />
    
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/selector_notifications"
        android:title="@string/notifications" />
    
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/selector_profile"
        android:title="@string/profile" />
</menu>
