<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_background"
    android:padding="32dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_italic"
        android:textAlignment="center"
        android:text="@string/welcome_message"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/seamless"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/poppins_italic"
        android:text="@string/seamless"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_gradient"
            android:drawablePadding="30dp"
            android:text="@string/login"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/input_field_background"
            android:drawablePadding="16dp"
            android:text="@string/signup"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
